--- a/estilos/estilo-main.css
+++ b/estilos/estilo-main.css
@@ -22,7 +22,6 @@ main .icone{
     background-color: aliceblue;
     width: 400px;
     height: 300px;
-    margin-right: 30px;
 }
 
 main .informacao{
@@ -33,12 +32,13 @@ main .informacao{
 
 main .botao{
     margin-top: 90px;
-    width: 600px;
     height: 40px;
-
     border: none;
     border-radius: 10px;
 
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
+
+    width: 100%;
+    max-width: 600px;
 }
